# ces-next-gen-agent-demo

./: .gitignore  Makefile  README.md  arch_overview.md  code-context-2.txt  llms-full.txt  main.py  package-lock.json  pyproject.toml  service_account.sh
ces/backend/server/: .dockerignore  .env  .env.example  .env_wei  Dockerfile  cloudbuild_generic.yaml  cloudbuild_optus_modem-v2.yaml  cloudbuild_optus_modem.yaml  combined-cloudbuild.yaml  combined-cloudbuild_tally.yaml  combined_server.py  pyproject.toml  requirements.txt  secret_manager.py
ces/backend/server/config/: config.py
ces/backend/server/core/: agent_factory.py  logger.py  session_state.py  session_utils.py  websocket_handler.py
ces/backend/server/core/agents/dream11/: __init__.py  context.py  dream11_assist.py  examples.py  prompts_orig.py  tools.py
ces/backend/server/core/agents/dyson/: context.py  dyson_assist.py  mygmail.py  prompts.py  testsms.py  tools.py
ces/backend/server/core/agents/generic/: __init__.py  context.py  examples.py  generic_assist.py  prompts.py  tools.py
ces/backend/server/core/agents/ollie/: examples.py
ces/backend/server/core/agents/optus_modem/: context.py  examples.py  old_prompts.py  optus_modem_assist.py  prompts.py  tools.py
ces/backend/server/core/agents/servicesaus/: __init__.py  context.py  examples.py  prompts.py  prompts_orig.py  tools.py
ces/backend/server/core/agents/tally/: __init__.py  context.py  examples.py  prompts.py  tally_assist.py  tools.py
ces/backend/server/core/agents/teg/: examples.py  (+1 more)
ces/backend/server/old/: combined-cloudbuild_teg.yaml
(+79 files in other folders)
